--- a/07_jsFrameworks/myangularnext/src/app/components/contact-form/contact-form.component.html
+++ b/07_jsFrameworks/myangularnext/src/app/components/contact-form/contact-form.component.html
@@ -1,2 +1,4 @@
 <p>contact-form works!</p>
 <h2>Тут будет уникальный дизайн и верстка!!!</h2>
+<p><span> User Name : </span> {{ myName }}</p>
+<p><input [(ngModel)]="myName" placeholder="name"></p>
